--  Hinecraft (Simple Minecraft Clone) 
-- 

name:                Hinecraft
version:             0.1.1.0
-- synopsis:            
description:         This is minecraft clone
license:             Apache-2.0
license-file:        LICENSE
author:              T.Mishima
maintainer:          tetsuya.mishima@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable Hinecraft
  main-is:           Hinecraft/Hinecraft.hs
  other-modules:     Hinecraft.Types,
                     Hinecraft.GUI.GLFWWindow
                     Hinecraft.Data
                     Hinecraft.Util
                     Hinecraft.Model
                     Hinecraft.Render.View,
                     Hinecraft.Render.Types
                     Hinecraft.Render.Util

  build-depends:       base ==4.6.*
                     , GLFW-b , OpenGL , mtl == 2.*
                     , bytestring == 0.10.*
                     , array , vector , directory , process
                     , OpenGLRaw , cereal , JuicyPixels , FTGL 
                     , containers , GLUtil
  -- hs-source-dirs:    Hinecraft
  -- ghc-options:         -Wall -threaded
  -- ghc-options:         -Wall -O2 -prof -auto-all -caf-all -fforce-recomp -rtsopts
  -- ghc-options:         -Wall -O2 -threaded 
  ghc-options:       -O2 -threaded 
