--  Hinecraft (Simple Minecraft Clone) 
-- 

name:                Hinecraft
version:             0.3.0.0
-- synopsis:            
description:         This is minecraft clone
license:             Apache-2.0
license-file:        LICENSE
author:              T.Mishima
maintainer:          tetsuya.mishima@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable Hinecraft
  Default-Language:  Haskell2010
  main-is:           Hinecraft/Hinecraft.hs
  other-modules:     Hinecraft.Types,
                     Hinecraft.GUI.GLFWWindow
                     Hinecraft.Data
                     Hinecraft.Util
                     Hinecraft.Model
                     Hinecraft.Render.View,
                     Hinecraft.Render.Types
                     Hinecraft.Render.Util
                     Hinecraft.Render.TitleView
                     Hinecraft.Render.WithSimpleShader
                     Hinecraft.WithSqlite 
                     Hinecraft.DB.WithSqlite3 
  build-depends:       base ==4.6.*
                     , GLFW-b , OpenGL , mtl == 2.*
                     , bytestring == 0.10.*
                     , array , vector , directory , process
                     , OpenGLRaw , cereal , FTGL , time
                     , containers , GLUtil , linear , text
                     , sqlite-simple

  if os(windows)
    extra-lib-dirs:    extra_lib_for_Windows7_32bit

  -- hs-source-dirs:    Hinecraft
  -- ghc-options:         -Wall -threaded
  -- ghc-options:         -Wall -O2 -prof -auto-all -caf-all -fforce-recomp -rtsopts
  -- ghc-options:         -Wall -O2 -threaded  -XEmptyDataDeclspermits
  ghc-options:       -O2 -threaded

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test, .
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        DB.WithSqlite3Spec
  Build-Depends:        base
                      , hspec >= 1.3
                      , text , directory , sqlite-simple
                     -- , QuickCheck



